deploy/k8s/deployment-ipconfig.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-ipconfig
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns-ipconfig
  name: deployment-ipconfig-io-v1
  labels:
    app: ipconfig-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipconfig-io
      version: v1.0.0
  template:
    metadata:
      labels:
        app: ipconfig-io
        version: v1.0.0
    spec:
      terminationGracePeriodSeconds: 100
      containers:
      - name: ipconfig-io
        image: docker.io/georgyo/ifconfig.io:latest
        ports:
        - name: http
          containerPort: 8080
---
# via LoadBalancer
apiVersion: v1
kind: Service
metadata:
  namespace: ns-ipconfig
  name: svc-lb-ipconfig-io
  labels:
    app: ipconfig-io
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: ipconfig-io
---
apiVersion: v1
kind: Service
metadata:
  namespace: ns-ipconfig
  name: svc-ipconfig-io
  labels:
    app: ipconfig-io
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: ipconfig-io
---
# via public AGIC
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ns-ipconfig
  name: ingress-public-ipconfig-io
  labels:
    app: ipconfig-io
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/connection-draining: "true"
    appgw.ingress.kubernetes.io/connection-draining-timeout: "30"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: svc-ipconfig-io
            port:
              number: 80
---
# via private AGIC
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ns-ipconfig
  name: ingress-private-ipconfig-io
  labels:
    app: ipconfig-io
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/connection-draining: "true"
    appgw.ingress.kubernetes.io/connection-draining-timeout: "30"
    appgw.ingress.kubernetes.io/use-private-ip: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: svc-ipconfig-io
            port:
              number: 80
